@@ -9,6 +9,7 @@
 
 # Devel::Cover
 cover_db/
+cover_html/
 
 # Devel::NYTProf
 nytprof.out
@@ -33,6 +34,8 @@ inc/
 /MANIFEST.bak
 /pm_to_blib
 /*.zip
+*.swp
+.DS_Store
 
 # Carton/Carmel
 /local/
