@@ -13,5 +13,6 @@ t/eol.t
 t/missing.t
 t/pod-cm.t
 t/pod.t
+t/strict.t
 t/version.t
 t/version_flag.t
