@@ -6,6 +6,7 @@ Revision history for Test-Which
 	Added support for extractor
 	Added version_flag
 	Don't look in path if absolute name given
+	Cache calls
 
 0.03	Fri Nov 28 16:30:02 EST 2025
 	Use hashref rather than putting entire hash on the stack
